fix of overflow on the right-hand side (horizontal scrollbar)

--- a/src/components/shopPage/shopPage.scss
+++ b/src/components/shopPage/shopPage.scss
@@ -32,7 +32,7 @@
   @include flex-row();
   justify-content: space-around;
   flex-wrap: wrap;
-  margin-right: -20px;
+  margin-left: -20px;
 }
 
 .cards li {
@@ -40,8 +40,7 @@
   align-items: center;
   flex: 1 1 auto;
   min-height: 380px;
-  margin-bottom: 30px;
-  margin-right: 20px;
+  margin: 0 0 20px 20px;
 }
 
 @media screen and (min-width: 1100px) {
